html/styles.css
* {
    box-sizing: border-box;
}

body {
	margin: 0 auto;
}

#top {
    margin-top: -55px
}

.header { /*wraps the nav and title*/
    width: 100%;
    text-align: center;
    margin: 0 auto 3.5em auto;
	background: white;
}

.nav {
	background: rgba(255, 255, 255, 1);
	position: fixed;
	width: 100%;
	margin: 0 auto;
	padding-bottom: 1em;
	border-bottom: 10px double #58310d;
	z-index: 1;
    top: 6.5em;
	transition: all .5s ease;
	-webkit-transition: all .5s ease;
}

.scroll-nav { /*changing nav bar on scroll*/
	top: 0;
	position: fixed;
	padding: 0;
}


h1.title {
    font-size: 3em;
    text-transform: uppercase;
    width: 100%;
    text-align: center;
    background: white;
	margin: 0 auto;
    padding: .5em 0;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 0;
    opacity: 1;
	transition: all .5s ease;
	-webkit-transition: all .5s ease;/* Don't disappear SLOWER. Disappear SOONER*/  
}

.disappear { /*for the fading out h1 title*/
	opacity: 0;
    color: white;
	
}

ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
	
}

li {
    padding: 0 4em;
    font-size: 1.3em;
}

p,
li,
h3,
h2,
h1,
a {
    color: #58310d;
}

h1,
h2 {
	font-family: 'Abril Fatface', cursive;
}

p,
li,
h3 {
    font-family: 'Fira Sans', sans-serif;
}

.content {
	position: relative;
	top: 11.5em;
}

p.intro {
	text-align: center;
	margin: -10px 0 0 0;
}

#googleMap {
    width: 100%;
    height: 650px;
	margin: 0 auto 10em auto;
}

.back-to-map {
	position: fixed;
	top: 8em;
	left: 87.5%;
	text-align: center;
	z-index: 2;
	opacity: 0;
	transition: opacity .5s ease;
}

.appear { /*so the 'back to map' h3 only shows when you are further down the page*/
	opacity: 1;
	transition: opacity 1s ease;
}

							/* styling for main content in sections */



.section {
	width: 100%;
	margin: 0 auto 5em auto;
	
}

h2.sec-tit {
	font-size: 1.8em;
	font-weight: 400;
	text-align: center;
}

.section p {
	width: 60%;
	margin: 2em auto;
	text-align: justify;
}



				    /* LINK STYLING */

a {
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

